# azure-sphere-iot-bubble-machine

./: .gitignore  Bubbles.json  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  app_manifest.json  interface.json  launch.vs.json
docs/: README.md
inc/: eventloop_timer_utilities.h  motor.h  networking.h  parson.h  pwmcontroller.h  rotary_encoder.h  stepper.h
src/: eventloop_timer_utilities.c  main.c  main.cc  motor.c  networking.c  parson.c  pwmcontroller.c  rotary_encoder.c  stepper.c
stl/: Axel.stl  BlowerMount.stl  BubbleBase.stl  BubbleWand.3MF  MotorMount.stl  Wand.stl
